--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-input {
+/* input {
   font-size: 20px;
   color: black;
   padding-left: 20px;
-  padding-right: 20px;
   width: 450px;
   height: 70px;
   box-shadow: 0px 80px 190px 1px rgb(147, 144, 144);
@@ -11,7 +10,6 @@ input {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 11px;
-  border: none;
   user-select: none;
   outline: none;
 }
@@ -53,4 +51,4 @@ button {
     width: 300px;
     height: 70px;
   }
-}
+} */
